raw-configs/canary-frontend/canary-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-frontend-deployment
  labels:
    deployment: canary-frontend
spec:
  selector:
    matchLabels:
      app: canary-frontend
    replicas: 1
  template:
    metadata:
      labels:
        app: canary-frontend
    spec:
      containers:
        - name: canary-frontend
          image: ekke020/canary-frontend:5a3aaed
          ports:
            - containerPort: 80
