raw-configs/canary-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary
  labels:
    deployment: frontend
spec:
  selector:
    matchLabels:
      app: canary
    replicas: 1
  template:
    metadata:
      labels:
        app: canary
    spec:
      containers:
        - name: canary-frontend
          image: ekke020/canary-frontend:latest
          ports:
            - containerPort: 80
