raw-configs/canary-frontend/canary-frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  labels:
    service: canary-frontend-service
    app: canary-frontend-service
  name: canary-frontend-service
  namespace: default

spec:
  type: NodePort
  selector:
    app: canary-frontend
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
