raw-configs/canary-frontend/service.yaml
apiVersion: v1
kind: Service

metadata:
  labels:
    service: frontend-srv
    app: canary
  name: frontend-srv

spec:
  type: NodePort
  selector:
    app: canary
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
