raw-configs/canary-frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  defaultBackend:
    service:
      name: frontend-srv
      port:
        number: 80
